# discord-bot-rust

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: mod.rs
src/handler/: mod.rs
src/utils/: mod.rs
